--- a/Neo4j.Infrastructure/Neo4j.Infrastructure.csproj
+++ b/Neo4j.Infrastructure/Neo4j.Infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Neo4j.Driver" Version="5.9.0" />
+      <PackageReference Include="Neo4jClient" Version="5.1.11" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
