--- a/Neo4j.Application/Neo4j.Application.csproj
+++ b/Neo4j.Application/Neo4j.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Neo4j.Domain\Neo4j.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Riok.Mapperly" Version="2.8.0" />
+    </ItemGroup>
+
 </Project>
